--- a/mgt_app/reliability/templates/spof-pvc.html
+++ b/mgt_app/reliability/templates/spof-pvc.html
@@ -27,7 +27,7 @@
     <div class="layui-row">
       <fieldset
         class="layui-elem-field site-demo-button"
-        style="margin-top: 20px; margin-left: 20px; width: 65%;"
+        style="margin-top: 20px; margin-left: 20px; width: 96%;"
       >
         <legend>Test case of Spof_pvc scenario</legend>
         <form class="layui-form" action="">
@@ -106,7 +106,7 @@
           <div class="layui-form-item">
             <label class="layui-form-label">test_action</label>
             <div class="layui-input-inline">
-              <select name="test_action">
+              <select name="test_action" lay-filter="test_action">
                 <option value="node_down" selected>node_down</option>
                 <option value="switch_port_down">switch_port_down</option>
                 <option value="interface_down">interface_down</option>
@@ -192,6 +192,65 @@
               />
             </div>
           </div>
+          <hr class="layui-border-red">
+          <div class="layui-form-item" >
+            <label class="layui-form-label">test_node_hostname</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_hostname"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required"
+              />
+            </div>
+            <label class="layui-form-label">test_node_IP</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_IP"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required|ip"
+              />
+            </div>
+          </div>
+          <div class="layui-form-item" >
+            <label class="layui-form-label">test_node_port</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_port"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required|number"
+              />
+            </div>
+            <label class="layui-form-label">test_node_password</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_password"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required"
+              />
+            </div>
+            <div class="layui-input-inline">
+              <button
+                type="button"
+                class="layui-btn layui-btn-primary layui-btn-sm"
+                lay-active="addHost"
+              >
+                <i class="layui-icon">&#xe654;</i>
+              </button>
+            </div>
+          </div>
+          <div id="testnode"></div>
           <div class="layui-form-item">
             <button
               type="submit"
