add bmc and mail receiver configuration on reliability page

--- a/mgt_app/reliability/templates/spof.html
+++ b/mgt_app/reliability/templates/spof.html
@@ -100,6 +100,38 @@
               ></textarea>
             </div>
           </div>
+          <div class="layui-form-item" id="bmc">
+            <label class="layui-form-label">bmc_ip</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="bmc_ip"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+            <label class="layui-form-label">bmc_user</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="bmc_user"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+            <label class="layui-form-label">bmc_password</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="bmc_password"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+          </div>
           <div class="layui-form-item" id="down_switch" hidden>
             <label class="layui-form-label">down_switch</label>
             <div class="layui-input-inline">
@@ -168,6 +200,19 @@
               />
             </div>
           </div>
+          <div class="layui-form-item">
+            <label class="layui-form-label">mail_receiver</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="mail_receiver"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="not_require_email"
+              />
+            </div>
+          </div>
           <hr class="layui-border-red" />
           <div class="layui-form-item">
             <label class="layui-form-label">test_node_hostname</label>
@@ -226,6 +271,7 @@
               </button>
             </div>
           </div>
+
           <div id="testnode"></div>
           <div class="layui-form-item">
             <button
