--- a/mgt_app/reliability/templates/spof-pvc.html
+++ b/mgt_app/reliability/templates/spof-pvc.html
@@ -124,6 +124,38 @@
               ></textarea>
             </div>
           </div>
+          <div class="layui-form-item" id="bmc">
+            <label class="layui-form-label">bmc_ip</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="bmc_ip"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+            <label class="layui-form-label">bmc_user</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="bmc_user"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+            <label class="layui-form-label">bmc_password</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="bmc_password"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+          </div>
           <div class="layui-form-item" id="down_switch" hidden>
             <label class="layui-form-label">down_switch</label>
             <div class="layui-input-inline">
@@ -192,8 +224,21 @@
               />
             </div>
           </div>
-          <hr class="layui-border-red">
-          <div class="layui-form-item" >
+          <div class="layui-form-item">
+            <label class="layui-form-label">mail_receiver</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="mail_receiver"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="not_require_email"
+              />
+            </div>
+          </div>
+          <hr class="layui-border-red" />
+          <div class="layui-form-item">
             <label class="layui-form-label">test_node_hostname</label>
             <div class="layui-input-inline">
               <input
@@ -217,7 +262,7 @@
               />
             </div>
           </div>
-          <div class="layui-form-item" >
+          <div class="layui-form-item">
             <label class="layui-form-label">test_node_port</label>
             <div class="layui-input-inline">
               <input
