add go-meter configuration on spof page

--- a/mgt_app/reliability/templates/spof.html
+++ b/mgt_app/reliability/templates/spof.html
@@ -78,6 +78,17 @@
                 lay-verify="required"
               />
             </div>
+            <label class="layui-form-label">go_meter_bs</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="go_meter_bs"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required"
+              />
+            </div>
           </div>
           <div class="layui-form-item">
             <label class="layui-form-label">test_action</label>
